JumpScript/tests/baselines/reference/superSymbolIndexedAccess3.errors.txt
tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess3.jump(11,22): error TS2538: Type 'typeof Bar' cannot be used as an index type.


==== tests/cases/conformance/expressions/superPropertyAccess/superSymbolIndexedAccess3.jump (1 errors) ====
    var symbol = Symbol.for('myThing');
    
    class Foo {
        [symbol]() {
            return 0;
        }
    }
    
    class Bar extends Foo {
        [symbol]() {
            return super[Bar]();
                         ~~~
!!! error TS2538: Type 'typeof Bar' cannot be used as an index type.
        }
    }